<resources>
    <string name="app_name">rumble app 2020</string>
    <string name="title_activity_page2">page2</string>
    <string name="one">1</string>
    <string name="additional_information">Additional Information</string>

    <string name="psname">%s</string>
    <string name="alliance">%s</string>
    <string name="hatch">Hatch</string>

    <string name="front">Front</string>
    <string name="_3">3</string>


    <string name="start">START</string>
    <string name="cargo">Cargo</string>
    <string name="side">Side</string>
    <string name="textview">TextView</string>
    <string name="_2">2</string>
    <string name="defense">Defense</string>
    <string name="blocked_score">Blocked Score</string>
    <string name="info">info</string>
    <string name="settings">settings</string>
    <string name="submit">submit</string>
    <string name="submitme">Are you sure?</string>
    <string name="alliance_score">Alliance Score</string>
    <string name="team">Team:</string>
    <string name="match">Match:</string>
    <string name="alliance_">Alliance:</string>
    <string name="name">Name:</string>
    <string name="type_score_here">Type Score Here</string>
</resources>
